docs: rename example

--- a/packages/html-test-app/src/preview-examples/application-app-switch.html
+++ b/packages/html-test-app/src/preview-examples/application-app-switch.html
@@ -35,7 +35,7 @@ SPDX-License-Identifier: MIT
             name: 'Floor App',
             iconSrc: 'https://www.svgrepo.com/show/530661/genetic-data.svg',
             url: 'https://ix.siemens.io/',
-            description: 'Example description for floor app',
+            description: 'Example description for Floor app',
             target: '_self',
           },
           {
@@ -43,7 +43,7 @@ SPDX-License-Identifier: MIT
             name: 'Calculator App',
             iconSrc: 'https://www.svgrepo.com/show/530661/genetic-data.svg',
             url: 'https://ix.siemens.io/',
-            description: 'Example description for floor app',
+            description: 'Example description for Calculator app',
             target: '_self',
           },
         ],
