--- a/packages/angular-test-app/src/preview-examples/panes-inline.html
+++ b/packages/angular-test-app/src/preview-examples/panes-inline.html
@@ -1,11 +1,11 @@
 <div>
-  <ix-panes inline>
-    <ix-pane paneTitle="TOP" slot="top"> </ix-pane>
-    <ix-pane paneTitle="LEFT" slot="left"> </ix-pane>
-    <ix-pane paneTitle="RIGHT" slot="right"></ix-pane>
-    <ix-pane paneTitle="BOTTOM" slot="bottom"></ix-pane>
+  <ix-pane-layout variant="inline">
+    <ix-pane heading="TOP" slot="top"> </ix-pane>
+    <ix-pane heading="LEFT" slot="left"> </ix-pane>
+    <ix-pane heading="RIGHT" slot="right"></ix-pane>
+    <ix-pane heading="BOTTOM" slot="bottom"></ix-pane>
     <div slot="content">
       <p>This is a text content.</p>
     </div>
-  </ix-panes>
+  </ix-pane-layout>
 </div>
