--- a/packages/core/src/tests/panes/basic/index.html
+++ b/packages/core/src/tests/panes/basic/index.html
@@ -13,49 +13,35 @@ SPDX-License-Identifier: MIT
       name="viewport"
     />
     <title>Stencil Component Starter</title>
-    <style>
-      ix-basic-navigation {
-        height: 100vh;
-        width: 100vw;
-      }
-    </style>
   </head>
-  <body>
-    <ix-basic-navigation>
-      <ix-menu>
-        <ix-menu-item home icon="home">
-          Home
-        </ix-menu-item>
-        <ix-menu-item icon="globe">Normal Tab</ix-menu-item>
-        <ix-menu-category icon="rocket" label="Top level Category">
-          <ix-menu-item icon="globe">Nested Tab</ix-menu-item>
-          <ix-menu-item icon="globe">Nested Tab</ix-menu-item>
-        </ix-menu-category>
-      </ix-menu>
-      <ix-pane-layout>
-        <ix-pane heading="TOP" slot="top">
-          <h1>Test Heading</h1>
-          <p>This is a test content with a button</p>
-          <ix-button>PUSH ME</ix-button>
-        </ix-pane>
-        <ix-pane heading="LEFT" slot="left">
-          <h1>Test Heading</h1>
-          <p>This is a test content with a button</p>
-          <ix-button>PUSH ME</ix-button>
-        </ix-pane>
-        <ix-pane icon="about" heading="RIGHT" slot="right"></ix-pane>
-        <ix-pane heading="BOTTOM" slot="bottom"></ix-pane>
-        <div class="content">
-          <h1>Test Heading</h1>
-          <h1>Test Heading</h1>
-          <h1>Test Heading</h1>
-          <h1>Test Heading</h1>
-          <h1>Test Heading</h1>
-          <p>This is a test content with a button</p>
-          <ix-button>PUSH ME</ix-button>
-        </div>
-      </ix-pane-layout>
-    </ix-basic-navigation>
+  <body style="width: 100vw; height: 100vh">
+    <div style="position: relative; width: 100%; height: 100%">
+      <ix-pane
+        id="popup-pane"
+        heading="Pane Popup"
+        position="right"
+        size="50%"
+        variant="floating"
+        collapsible="false"
+        expanded="false"
+        style="position: absolute; right: 0; z-index: 1"
+      >
+        <p>This is a popup pane.</p>
+      </ix-pane>
+
+      <ix-button id="toggle-expanded" style="margin: 2.5rem" >
+        Toggle Expanded
+      </ix-button>
+    </div>
+
+    <script>
+      const pane = document.getElementById("popup-pane");
+      const button = document.getElementById("toggle-expanded");
+
+      button.addEventListener("click", () => {
+        pane.expanded = !pane.expanded
+      })
+    </script>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
