fix: review + minor changes

--- a/packages/angular-test-app/src/preview-examples/pane.html
+++ b/packages/angular-test-app/src/preview-examples/pane.html
@@ -4,7 +4,7 @@
     position="right"
     size="50%"
     variant="floating"
-    collapsible="false"
+    hide-on-collapse
     [expanded]="expanded"
     (expandedChanged)="expandedChanged($event)"
     style="position: absolute; right: 0; z-index: 1"
