--- a/packages/html-test-app/src/preview-examples/pane-layout.html
+++ b/packages/html-test-app/src/preview-examples/pane-layout.html
@@ -20,7 +20,7 @@ SPDX-License-Identifier: MIT
       id="pane-layout"
       variant="floating"
       layout="full-width-top-bottom"
-      borderless="true"
+      borderless
     >
       <ix-pane heading="Pane Left" slot="left" size="33%">
         <p>This is the left pane.</p>
