--- a/packages/html-test-app/src/preview-examples/pane.html
+++ b/packages/html-test-app/src/preview-examples/pane.html
@@ -20,7 +20,7 @@ SPDX-License-Identifier: MIT
       <ix-pane
         id="popup-pane"
         heading="Pane Popup"
-        position="right"
+        composition="right"
         size="50%"
         variant="floating"
         hide-on-collapse
