--- a/packages/angular-test-app/src/preview-examples/pane.html
+++ b/packages/angular-test-app/src/preview-examples/pane.html
@@ -1,7 +1,7 @@
 <div style="position: relative; width: 100%; height: 100%">
   <ix-pane
     heading="Pane Popup"
-    position="right"
+    composition="right"
     size="50%"
     variant="floating"
     hide-on-collapse
