--- a/packages/core/src/tests/panes/basic/index.html
+++ b/packages/core/src/tests/panes/basic/index.html
@@ -19,10 +19,10 @@ SPDX-License-Identifier: MIT
       <ix-pane
         id="popup-pane"
         heading="Pane Popup"
-        position="right"
+        composition="right"
         size="50%"
         variant="floating"
-        collapsible="false"
+        hide-on-collapse
         expanded="false"
         style="position: absolute; right: 0; z-index: 1"
       >
