--- a/packages/core/src/tests/message-bar/basic/index.html
+++ b/packages/core/src/tests/message-bar/basic/index.html
@@ -14,13 +14,19 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
+  <div style="margin: 0.5rem">
     <ix-message-bar>Message text</ix-message-bar>
-    <ix-message-bar type="warning">Message text</ix-message-bar>
+  </div>
+  <div style="margin: 0.5rem;">
+    <ix-message-bar style="margin: 10%;" type="warning">Message text</ix-message-bar>
+  </div>
+  <div style="margin: 0.5rem;" >
     <ix-message-bar type="danger">
       <div class="d-flex align-items-center justify-content-between">
         Message text <ix-button>Action</ix-button>
       </div>
     </ix-message-bar>
+  </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
