fix(core/message-bar): adjusted preview-examples and test

--- a/packages/html-test-app/src/preview-examples/message-bar.html
+++ b/packages/html-test-app/src/preview-examples/message-bar.html
@@ -9,13 +9,17 @@ SPDX-License-Identifier: MIT
   <head> </head>
   <body class="theme-brand-dark">
     <!-- Preview code -->
-    <ix-message-bar>Message text</ix-message-bar>
-    <ix-message-bar type="warning">Message text</ix-message-bar>
-    <ix-message-bar type="danger">
-      <div class="d-flex align-items-center justify-content-between">
-        Message text <ix-button>Action</ix-button>
-      </div>
-    </ix-message-bar>
+    <div style='padding: 0.5rem'>
+      <ix-message-bar>Message text</ix-message-bar>
+      <br />
+      <ix-message-bar type="warning">Message text</ix-message-bar>
+      <br />
+      <ix-message-bar type="danger">
+        <div class="d-flex align-items-center justify-content-between">
+          Message text <ix-button>Action</ix-button>
+        </div>
+      </ix-message-bar>
+    </div>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
   </body>
