docs: add panes

--- a/packages/html-test-app/src/preview-examples/pane.html
+++ b/packages/html-test-app/src/preview-examples/pane.html
@@ -12,7 +12,7 @@ SPDX-License-Identifier: MIT
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
       name="viewport"
     />
-    <title>Panes Inline Example</title>
+    <title>Pane Example</title>
   </head>
   <body class="theme-brand-dark">
     <!--Preview code-->
