--- a/packages/core/src/tests/message-bar/basic/index.html
+++ b/packages/core/src/tests/message-bar/basic/index.html
@@ -14,11 +14,9 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-  <div style='padding: 0.5rem'>
-    <ix-message-bar>Message text</ix-message-bar>
-    <br />
-    <ix-message-bar type="warning">Message text</ix-message-bar>
-    <br />
+  <div style="margin: 0.5rem">
+    <ix-message-bar style="margin-bottom: 1.25rem; display: block">Message text</ix-message-bar>
+    <ix-message-bar style="margin-bottom: 1.25rem; display: block" type="warning">Message text</ix-message-bar>
     <ix-message-bar type="danger">
       <div class="d-flex align-items-center justify-content-between">
         Message text <ix-button>Action</ix-button>
