--- a/packages/html-test-app/src/preview-examples/message-bar.html
+++ b/packages/html-test-app/src/preview-examples/message-bar.html
@@ -10,10 +10,8 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div style='padding: 0.5rem'>
-      <ix-message-bar>Message text</ix-message-bar>
-      <br />
-      <ix-message-bar type="warning">Message text</ix-message-bar>
-      <br />
+      <ix-message-bar style="margin-bottom: 1.25rem; display: block">Message text</ix-message-bar>
+      <ix-message-bar style="margin-bottom: 1.25rem; display: block" type="warning">Message text</ix-message-bar>
       <ix-message-bar type="danger">
         <div class="d-flex align-items-center justify-content-between">
           Message text <ix-button>Action</ix-button>
