--- a/packages/angular-test-app/src/preview-examples/menu-category.html
+++ b/packages/angular-test-app/src/preview-examples/menu-category.html
@@ -1,10 +1,12 @@
-<ix-application>
-  <ix-menu>
-    <ix-menu-item home icon="home">Home</ix-menu-item>
-    <ix-menu-item icon="globe">Normal Tab</ix-menu-item>
-    <ix-menu-category label="Top level Category" icon="rocket">
-      <ix-menu-item icon="globe">Nested Tab</ix-menu-item>
-      <ix-menu-item icon="globe">Nested Tab</ix-menu-item>
-    </ix-menu-category>
-  </ix-menu>
-</ix-application>
+<ix-menu expand="true">
+  <ix-menu-item home-tab tab-icon="home"> Home </ix-menu-item>
+  <ix-menu-category>
+    <ix-menu-item tab-icon="globe" [active]="true"> Normal Tab 1  </ix-menu-item>
+    <ix-menu-item tab-icon="globe"> Normal Tab 2 </ix-menu-item>
+  </ix-menu-category>
+  <ix-menu-item tab-icon="star" disabled> Disabled Tab </ix-menu-item>
+  <ix-menu-item tab-icon="star"> With other Icon </ix-menu-item>
+  <ix-menu-item tab-icon="globe" style="display: none">
+    Should not visible
+  </ix-menu-item>
+</ix-menu>
