--- a/packages/core/src/tests/message-bar/basic/index.html
+++ b/packages/core/src/tests/message-bar/basic/index.html
@@ -17,7 +17,7 @@ SPDX-License-Identifier: MIT
   <div style="margin: 0.5rem">
     <ix-message-bar style="margin-bottom: 1.25rem; display: block">Message text</ix-message-bar>
     <ix-message-bar style="margin-bottom: 1.25rem; display: block" type="warning">Message text</ix-message-bar>
-    <ix-message-bar type="danger">
+    <ix-message-bar style="display: block" type="danger">
       <div class="d-flex align-items-center justify-content-between">
         Message text <ix-button>Action</ix-button>
       </div>
