fix(core/message-bar): visual regression

--- a/packages/core/src/tests/message-bar/basic/index.html
+++ b/packages/core/src/tests/message-bar/basic/index.html
@@ -14,7 +14,7 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-  <div style="margin: 0.5rem">
+  <div style="margin: 0.5rem; display: block">
     <ix-message-bar style="margin-bottom: 0.5rem; display: block">Message text</ix-message-bar>
     <ix-message-bar style="margin-bottom: 0.5rem; display: block" type="warning">Message text</ix-message-bar>
     <ix-message-bar style="display: block" type="danger">
