--- a/packages/html-test-app/src/preview-examples/tooltip.html
+++ b/packages/html-test-app/src/preview-examples/tooltip.html
@@ -13,14 +13,14 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <div style="padding: 4rem">
-      <ix-button class="any-class" aria-describedby="my-tooltip">Hover me</ix-button
+      <ix-button class="any-class" aria-describedby="tooltip-1">Hover me</ix-button
       >
-      <ix-tooltip id="my-tooltip" for=".any-class">Simple selector</ix-tooltip>
+      <ix-tooltip id="tooltip-1" for=".any-class">Simple selector</ix-tooltip>
 
-      <ix-button my-custom-special-selector="any-value" aria-describedby="my-tooltip-01"
+      <ix-button my-custom-special-selector="any-value" aria-describedby="tooltip-2"
         >Also hover me</ix-button
       >
-      <ix-tooltip id="my-tooltip-01" for="[my-custom-special-selector='any-value']">
+      <ix-tooltip id="tooltip-2" for="[my-custom-special-selector='any-value']">
         Custom selector
       </ix-tooltip>
     </div>
