--- a/packages/core/src/tests/panes/basic/index.html
+++ b/packages/core/src/tests/panes/basic/index.html
@@ -18,6 +18,7 @@ SPDX-License-Identifier: MIT
     <div style="position: relative; width: 100%; height: 100%">
       <ix-pane
         id="popup-pane"
+        icon="star"
         heading="Pane Popup"
         composition="right"
         size="50%"
