fix(core/menu-item): adapted margin and preview examples

--- a/packages/html-test-app/src/preview-examples/vertical-tabs-with-avatar.html
+++ b/packages/html-test-app/src/preview-examples/vertical-tabs-with-avatar.html
@@ -12,7 +12,7 @@ SPDX-License-Identifier: MIT
   <body class="theme-brand-dark">
     <!-- Preview code -->
     <ix-menu>
-      <ix-menu-avatar image="https://ui-avatars.com/api/?name=John+Doe">
+      <ix-menu-avatar top="john.doe@company.com" bottom="Administrator" image="https://ui-avatars.com/api/?name=John+Doe">
         <ix-menu-avatar-item label="Option 1"></ix-menu-avatar-item>
       </ix-menu-avatar>
       <ix-menu-item home icon="home"> Home </ix-menu-item>
