--- a/packages/html-test-app/src/preview-examples/application-breakpoints.html
+++ b/packages/html-test-app/src/preview-examples/application-breakpoints.html
@@ -13,6 +13,11 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Application breakpoint example</title>
+    <!-- Sources -->
+    <script type="module">
+      import './styles-auto-gen/application.css';
+    </script>
+    <!-- Sources -->
   </head>
   <body class="theme-classic-dark">
     <!-- Preview code -->
