--- a/packages/core/src/tests/input-group/basic/index.html
+++ b/packages/core/src/tests/input-group/basic/index.html
@@ -15,6 +15,24 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <ix-input-group>
+      <input placeholder="Search" type="text" />
+      <span slot="input-start">
+        <ix-icon name="search" size="16" color="color-primary"></ix-icon>
+      </span>
+    </ix-input-group>
+    <ix-input-group>
+      <input placeholder="Search" readonly type="text" />
+      <span slot="input-start">
+        <ix-icon name="search" size="16" color="color-primary"></ix-icon>
+      </span>
+    </ix-input-group>
+    <ix-input-group>
+      <input placeholder="Search" disabled type="text" />
+      <span slot="input-start">
+        <ix-icon name="search" size="16" color="color-primary"></ix-icon>
+      </span>
+    </ix-input-group>
+    <ix-input-group>
       <span slot="input-start">Name</span>
       <input
         type="text"
