--- a/packages/html-test-app/src/preview-examples/vertical-tabs-with-avatar.html
+++ b/packages/html-test-app/src/preview-examples/vertical-tabs-with-avatar.html
@@ -13,7 +13,7 @@ SPDX-License-Identifier: MIT
     <!-- Preview code -->
     <ix-menu>
       <ix-menu-avatar top="john.doe@company.com" bottom="Administrator" image="https://ui-avatars.com/api/?name=John+Doe">
-        <ix-menu-avatar-item label="Option 1"></ix-menu-avatar-item>
+        <ix-menu-avatar-item icon="user-profile" label="User profile..."></ix-menu-avatar-item>
       </ix-menu-avatar>
       <ix-menu-item home icon="home"> Home </ix-menu-item>
       <ix-menu-item icon="globe"> Normal Tab </ix-menu-item>
