feat(core/menu): make behavior at breakpoint lg configurable

--- a/packages/core/src/tests/basic-navigation/mobile/index.html
+++ b/packages/core/src/tests/basic-navigation/mobile/index.html
@@ -41,7 +41,7 @@ SPDX-License-Identifier: MIT
   <body>
     <ix-basic-navigation application-name="Test">
       <div slot="logo">LOGO</div>
-      <ix-menu>
+      <ix-menu expanded-navigation-menu-preferred>
         <ix-menu-item>Test 1</ix-menu-item>
         <ix-menu-item>Test 2</ix-menu-item>
         <ix-menu-item>Test 3</ix-menu-item>
