--- a/packages/core/src/tests/application/mobile/index.html
+++ b/packages/core/src/tests/application/mobile/index.html
@@ -43,7 +43,7 @@ SPDX-License-Identifier: MIT
       <ix-application-header name="Test">
         <div slot="logo">LOGO</div>
       </ix-application-header>
-      <ix-menu>
+      <ix-menu expanded-navigation-menu-preferred>
         <ix-menu-item>Test 1</ix-menu-item>
         <ix-menu-item>Test 1</ix-menu-item>
         <ix-menu-item>Test 1</ix-menu-item>
