--- a/packages/core/src/tests/map-navigation/basic/index.html
+++ b/packages/core/src/tests/map-navigation/basic/index.html
@@ -43,7 +43,7 @@ SPDX-License-Identifier: MIT
           style="fill: url(#x05mhzd7ga)"
         />
       </svg>
-      <ix-menu>
+      <ix-menu expanded-navigation-menu-preferred>
         <ix-menu-item>Item 1</ix-menu-item>
         <ix-menu-item>Item 2</ix-menu-item>
         <ix-menu-item>Item 3</ix-menu-item>
