--- a/packages/core/src/tests/menu-settings/basic/index.html
+++ b/packages/core/src/tests/menu-settings/basic/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <ix-basic-navigation>
-      <ix-menu>
+      <ix-menu expanded-navigation-menu-preferred>
         <ix-menu-item>Item 1</ix-menu-item>
         <ix-menu-item>Item 2</ix-menu-item>
         <ix-menu-item>Item 3</ix-menu-item>
