--- a/packages/core/src/tests/menu/overflow/index.html
+++ b/packages/core/src/tests/menu/overflow/index.html
@@ -19,7 +19,7 @@ SPDX-License-Identifier: MIT
       <ix-application-header>
         <div class="placeholder-logo" slot="logo"></div>
       </ix-application-header>
-      <ix-menu>
+      <ix-menu expanded-navigation-menu-preferred>
         <ix-menu-avatar image="https://ui-avatars.com/api/?name=John+Doe">
           <ix-menu-avatar-item label="Option 1"></ix-menu-avatar-item>
         </ix-menu-avatar>
