--- a/packages/core/src/tests/menu/overflow/index.html
+++ b/packages/core/src/tests/menu/overflow/index.html
@@ -20,7 +20,7 @@ SPDX-License-Identifier: MIT
         <div class="placeholder-logo" slot="logo"></div>
       </ix-application-header>
       <ix-menu>
-        <ix-menu-avatar image="https://ui-avatars.com/api/?name=John+Doe">
+        <ix-menu-avatar initials="JD">
           <ix-menu-avatar-item label="Option 1"></ix-menu-avatar-item>
         </ix-menu-avatar>
         <ix-menu-item home tab-icon="home">
