--- a/packages/core/src/tests/application/content-width/index.html
+++ b/packages/core/src/tests/application/content-width/index.html
@@ -52,7 +52,7 @@ SPDX-License-Identifier: MIT
       </svg>
       </ix-application-header>
 
-      <ix-menu expanded-navigation-menu-preferred>
+      <ix-menu start-expanded>
         <ix-menu-item tab-icon="star">Item 1</ix-menu-item>
         <ix-menu-item tab-icon="print">Item 2</ix-menu-item>
       </ix-menu>
