--- a/packages/core/src/tests/basic-navigation/basic/index.html
+++ b/packages/core/src/tests/basic-navigation/basic/index.html
@@ -49,7 +49,7 @@ SPDX-License-Identifier: MIT
           style="fill: url(#x05mhzd7ga)"
         />
       </svg>
-      <ix-menu expanded-navigation-menu-preferred>
+      <ix-menu start-expanded>
         <ix-menu-item tab-icon="star">Item 1</ix-menu-item>
         <ix-menu-item tab-icon="print">Item 2</ix-menu-item>
       </ix-menu>
