--- a/packages/core/src/tests/menu-avatar/initials/index.html
+++ b/packages/core/src/tests/menu-avatar/initials/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <ix-basic-navigation>
-      <ix-menu expanded-navigation-menu-preferred>
+      <ix-menu start-expanded>
         <ix-menu-avatar initials="JD" top="top name" bottom="bottom name">
           <ix-menu-avatar-item label="Option 1"></ix-menu-avatar-item>
         </ix-menu-avatar>
