--- a/packages/core/src/tests/menu-avatar/no-dropdown/index.html
+++ b/packages/core/src/tests/menu-avatar/no-dropdown/index.html
@@ -15,7 +15,7 @@ SPDX-License-Identifier: MIT
 </head>
 <body>
 <ix-basic-navigation>
-  <ix-menu expanded-navigation-menu-preferred>
+  <ix-menu start-expanded>
     <ix-menu-avatar show-logout-button="false" image="./jd.png" top="top name" bottom="bottom name">
     </ix-menu-avatar>
     <ix-menu-item>Item 1</ix-menu-item>
