--- a/packages/core/src/tests/menu/basic/index.html
+++ b/packages/core/src/tests/menu/basic/index.html
@@ -16,7 +16,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body style="width: 100vw; height: 100vh">
     <ix-basic-navigation>
-      <ix-menu expanded-navigation-menu-preferred>
+      <ix-menu start-expanded>
         <ix-menu-item>Item 1</ix-menu-item>
         <ix-menu-category label="Category with a long name">
             <ix-menu-item icon="home" notifications="10">Sub 1</ix-menu-item>
