--- a/packages/core/src/tests/map-navigation/content-width/index.html
+++ b/packages/core/src/tests/map-navigation/content-width/index.html
@@ -52,7 +52,7 @@ SPDX-License-Identifier: MIT
           style="fill: url(#x05mhzd7ga)"
         />
       </svg>
-      <ix-menu start-expanded>
+      <ix-menu>
         <ix-menu-item>Item 1</ix-menu-item>
         <ix-menu-item>Item 2</ix-menu-item>
         <ix-menu-item>Item 3</ix-menu-item>
