--- a/packages/core/src/tests/application/application-switch/index.html
+++ b/packages/core/src/tests/application/application-switch/index.html
@@ -40,7 +40,7 @@ SPDX-License-Identifier: MIT
           {
             id: 'demo-app-1',
             name: 'Floor App',
-            iconSrc: 'https://www.svgrepo.com/show/530661/genetic-data.svg',
+            iconSrc: './genetic-data.svg',
             url: 'https://ix.siemens.io/',
             description: 'Example description for Floor app',
             target: '_self',
@@ -48,7 +48,7 @@ SPDX-License-Identifier: MIT
           {
             id: 'demo-app-2',
             name: 'Calculator App',
-            iconSrc: 'https://www.svgrepo.com/show/513581/square-play.svg',
+            iconSrc: './square-play.svg',
             url: 'https://ix.siemens.io/',
             description: 'Example description for Calculator app',
             target: '_self',
