feat(core/menu): make behavior at breakpoint 'lg' configurable and change 'md' breakpoint menu icons (#1156)
Co-authored-by: Daniel Leroux <daniel.leroux@siemens.com>

--- a/packages/core/src/tests/menu/link/index.html
+++ b/packages/core/src/tests/menu/link/index.html
@@ -16,7 +16,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body style="width: 100vw; height: 100vh">
     <ix-basic-navigation>
-      <ix-menu>
+      <ix-menu start-expanded>
         <a href="#link1">
           <ix-menu-item>Link 1</ix-menu-item>
         </a>
