--- a/packages/core/src/tests/menu/toggle/index.html
+++ b/packages/core/src/tests/menu/toggle/index.html
@@ -16,7 +16,7 @@ SPDX-License-Identifier: MIT
   </head>
   <body style="width: 100vw; height: 100vh">
     <ix-basic-navigation>
-      <ix-menu enable-toggle-theme>
+      <ix-menu enable-toggle-theme start-expanded>
         <ix-menu-item>Item 1</ix-menu-item>
         <ix-menu-category label="Category with a long name">
           <ix-menu-item icon="home">Sub 1</ix-menu-item>
