--- a/packages/angular-test-app/src/index.html
+++ b/packages/angular-test-app/src/index.html
@@ -13,7 +13,7 @@ SPDX-License-Identifier: MIT
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body>
+  <body class="theme-classic-dark">
     <app-root></app-root>
   </body>
 </html>
