fix(echarts): adapt html test file to new logic

--- a/packages/echarts/tests/basic.html
+++ b/packages/echarts/tests/basic.html
@@ -15,7 +15,6 @@ LICENSE file in the root directory of this source tree.
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.1/dist/echarts.min.js"></script>
-    <script type="module" src="../dist/index.esm.js"></script>
     <style>
       body {
         height: 100vh;
@@ -32,6 +31,10 @@ LICENSE file in the root directory of this source tree.
   <body>
     <div id="main"></div>
     <script type="module">
+      import { registerTheme } from '../dist/index.esm.js';
+
+      registerTheme(echarts);
+
       function getTheme() {
         const searchParams = new URLSearchParams(location.search);
 
