--- a/packages/react-test-app/index.html
+++ b/packages/react-test-app/index.html
@@ -7,15 +7,12 @@ SPDX-License-Identifier: MIT
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#000000" />
-    <title>React Test App</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>ReactTestApp</title>
+    <base href="/" />
   </head>
-  <body>
+  <body class="theme-classic-dark">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
