--- a/packages/vue-test-app/index.html
+++ b/packages/vue-test-app/index.html
@@ -6,12 +6,13 @@ SPDX-License-Identifier: MIT
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>VueTestApp</title>
+    <base href="/" />
     <link rel="icon" type="image/svg+xml" href="/vue.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue Test App</title>
   </head>
-  <body>
+  <body class="theme-classic-dark">
     <div id="root"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
