--- a/packages/html-test-app/src/preview-examples/echarts.html
+++ b/packages/html-test-app/src/preview-examples/echarts.html
@@ -19,7 +19,13 @@ LICENSE file in the root directory of this source tree.
     <!-- Preview code -->
     <div
       id="main"
-      style="display: block; position: relative; width: 100%; height: 40rem"
+      style="
+        display: block;
+        position: relative;
+        width: 100%;
+        height: 40rem;
+        padding-top: 1rem;
+      "
     ></div>
 
     <script type="module">
