fix(html-test-app): echarts example

--- a/packages/html-test-app/src/preview-examples/echarts.html
+++ b/packages/html-test-app/src/preview-examples/echarts.html
@@ -31,6 +31,7 @@ LICENSE file in the root directory of this source tree.
     <script type="module">
       import { registerTheme } from '@siemens/ix-echarts';
 
+      // providing echarts is in this case optional
       registerTheme(echarts);
 
       function getTheme() {
