--- a/packages/angular-test-app/src/index.html
+++ b/packages/angular-test-app/src/index.html
@@ -13,7 +13,7 @@ SPDX-License-Identifier: MIT
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body class="theme-classic-dark">
+  <body>
     <app-root></app-root>
   </body>
 </html>
