--- a/packages/react-test-app/index.html
+++ b/packages/react-test-app/index.html
@@ -12,7 +12,7 @@ SPDX-License-Identifier: MIT
     <title>ReactTestApp</title>
     <base href="/" />
   </head>
-  <body class="theme-classic-dark">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
