fix(vue-test-app): remove unnecessary class

--- a/packages/vue-test-app/index.html
+++ b/packages/vue-test-app/index.html
@@ -12,7 +12,7 @@ SPDX-License-Identifier: MIT
     <base href="/" />
     <link rel="icon" type="image/svg+xml" href="/vue.svg" />
   </head>
-  <body class="theme-classic-dark">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
