--- a/packages/documentation/static/code-runtime/vue/index.html
+++ b/packages/documentation/static/code-runtime/vue/index.html
@@ -15,7 +15,7 @@ LICENSE file in the root directory of this source tree.
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body class="theme-brand-dark">
+  <body class="">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
