--- a/packages/echarts/tests/basic.html
+++ b/packages/echarts/tests/basic.html
@@ -1,5 +1,5 @@
 <!--
-SPDX-FileCopyrightText: 2024 Siemens AG
+SPDX-FileCopyrightText: 2023 Siemens AG
 
 SPDX-License-Identifier: MIT
 
@@ -7,64 +7,91 @@ This source code is licensed under the MIT license found in the
 LICENSE file in the root directory of this source tree.
 -->
 
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ECharts example</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
+    />
     <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.1/dist/echarts.min.js"></script>
-  </head>
-  <body class="">
-    <!-- Preview code -->
-    <div
-      id="main"
-      style="
-        display: block;
-        position: relative;
-        width: 100%;
-        height: 40rem;
-        padding-top: 1rem;
-      "
-    ></div>
-
-    <script type="module">
-      import { convertThemeName, registerTheme } from '@siemens/ix-echarts';
-      import { themeSwitcher } from '@siemens/ix';
-
-      function initChart(theme, options) {
-        var myChart = echarts.init(
-          document.querySelector('#main'),
-          convertThemeName(theme)
-        );
-        myChart.setOption(options);
-
-        return myChart;
+    <style>
+      body {
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
       }
 
-      const options = {
-        tooltip: {
-          trigger: 'axis',
-          axisPointer: {
-            type: 'shadow',
-          },
+      #main {
+        min-height: 100%;
+        min-width: 100%;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="main"></div>
+    <script type="module">
+      import { registerTheme } from '../dist/index.esm.js';
+
+      function getTheme() {
+        const searchParams = new URLSearchParams(location.search);
+
+        if (!searchParams.has('theme')) {
+          return 'brand-dark';
+        }
+
+        const theme = searchParams.get('theme');
+
+        return theme.substring('theme-'.length, theme.length);
+      }
+
+      registerTheme(echarts);
+
+      const theme = getTheme();
+
+      // Configure the background color to enhance contrast
+      document.body.style.backgroundColor = theme.includes('dark')
+        ? 'black'
+        : 'white';
+
+      var myChart = echarts.init(document.querySelector('#main'), theme);
+
+      myChart.setOption({
+        title: {
+          text: 'Main',
+          subtext: 'The main chart',
         },
         legend: {},
-        grid: {
-          left: '3%',
-          right: '4%',
-          bottom: '3%',
-          containLabel: true,
+        toolbox: {
+          show: true,
+          feature: {
+            saveAsImage: {},
+            dataZoom: {},
+          },
+        },
+        tooltip: {
+          trigger: 'axis',
+        },
+        timeline: {
+          axisType: 'category',
+          autoPlay: false,
+          playInterval: 1000,
+          data: ['1', '2', '3'],
         },
         xAxis: [
           {
             type: 'category',
             data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+            name: 'Day',
+            axisPointer: {
+              type: 'shadow',
+            },
           },
         ],
         yAxis: [
           {
             type: 'value',
+            name: 'Amount',
           },
         ],
         series: [
@@ -155,23 +182,7 @@ LICENSE file in the root directory of this source tree.
             data: [62, 82, 91, 84, 109, 110, 120],
           },
         ],
-      };
-
-      // providing echarts is in this case optional
-      registerTheme(echarts);
-
-      var myChart = initChart(themeSwitcher.getCurrentTheme(), options);
-
-      themeSwitcher.themeChanged.on((theme) => {
-        myChart.dispose();
-        myChart = initChart(theme, options);
       });
-
-      window.onresize = function () {
-        myChart.resize();
-      };
     </script>
-    <!-- Preview code -->
-    <script type="module" src="./init.js"></script>
   </body>
 </html>
